css/styles.css
body, html {
    margin: auto;
    max-width: 100vw;
    scroll-behavior: smooth;
}

/*FONTS*/

main a, h1, h2, h3, .btn-primary, .container-dropdown-text label, .hamburger-font {
    font-family: sans-serif;
    font-weight: normal;
}

.hamburger-font, .btn-primary, .w-r, .container-dropdown-text label {
    text-transform: uppercase;
}

.hamburger-font, .container-dropdown-text label, .w-r, footer p, footer a, footer table, footer h3 {
    color: #fff;    
} 

.hamburger-font, .container-dropdown-text label {
    font-size: 16px;
}

a {
    text-decoration: none;
}

h2, .h2 {
    color: #235CA9;
    font-size: 24px;
}

h3, .h2, .container-dropdown-text label p {
    margin: 0;
}

.w-r {
    background-color: #631C38;
    padding: 2% 1%;
    font-size: 18px;
    margin: 0;
}

footer h3 {
    background-color: unset;
    text-transform: unset;
    padding: 2% 0;
}

footer p {
    margin: 0;
}

footer a {
    text-decoration: underline;
}

.tiny-font {
    font-size: 12px;
    color: rgb(197, 197, 197);
    margin: 5% 0 0;
}

address {
    font-style: normal;
}

aside p {
    margin: 0 0 3% 0;
}

.breadcrumb {
    font-size: 14px;
    color: #575757;
    margin: 0 1%;
}

.breadcrumb:hover {
    text-decoration: underline;
}

.container-dropdown-text.faq label h3 {
    color: #000;
    font-size: 16px;
}

.container-dropdown-text.faq .dropdown-text.hidden {
    border: solid 1px #cfcfcf;
    width: 100%;
}

.spaced-content {
    justify-content: space-between;
}

/*BUTTONS*/

.btn-primary {
    color: #000;
    background-color: #FFB147;
    border: unset;
    font-size: 16px; 
}

.container-dropdown-text label, .btn-primary {
    padding: 2%;
    text-align: center;
}

input.btn-primary {
    margin: 3% 0;
}

/*CONTAINERS*/

.container-columns {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.container-rows {
    display: flex;
    flex-direction: row;
}


.centered-content {
    display: flex;
    justify-content: center;
}

.container-columns.gap {
    gap: 5vh;
}

.container-columns.gap-small {
    gap: 2vh;
}

.container-columns.gap-tiny {
    gap: 0.8vh;
}

/*GENEREAL*/

.icon {
    height: 8px;
    padding: 0 10px;
    
}

.less-gap {
    margin: 6% 0 2%;
}

p {
    margin: 3% 0;
}

.hidden {
    display: none;
}

.visually-hidden {
    visibility: hidden;
    position: absolute;
}

.shadow {
    box-shadow: 0px 0px 20px 1px rgb(150, 150, 150);
}

.container-dropdown-text {
    background-color: #286125;
}

.container-dropdown-text label {
    display: flex;
    align-items: center;
}

.container-dropdown-text input {
    position: absolute;
    left: -110vw;
}

.box-text {
    margin: 0;
    padding: 2%;
    background-color: #fff;
}

#news1:checked ~ .dropdown-text, #news2:checked ~ .dropdown-text, #news3:checked ~ .dropdown-text,
#q1:checked ~ .dropdown-text, #q2:checked ~ .dropdown-text, #q3:checked ~ .dropdown-text, #q4:checked ~ .dropdown-text, 
#q5:checked ~ .dropdown-text, #q6:checked ~ .dropdown-text {
    display: block; 
}

.container-dropdown-text.faq {
    background-color: unset;
}

.max250 {
    max-width: 250px;
    width: 100%;
}

iframe {
    width: 100%;
    border: none;
    height: 30vh;
}

aside {
    max-width: 500px;
}

/*HEADER*/

.logo-banner {
    height: 12vh;
}

.logo-banner a {
    display: flex;
    justify-content: center;
    padding: 12px;
}

header div a img {
    height: 95%;
}

nav, footer {
    background-color: #286125;
    padding: 0 10% 0 10%;
    justify-content: space-between;
    align-items: center;
}

nav:first-child {
    justify-content: left;
}

nav input {
    width: 50%;
    background-color: #6C8D6A;
    border: solid 1px #fff;
}

nav input::placeholder {
    color: rgb(194, 194, 194);
}

.container-hamburger {
    padding: 10px 0;
}

.container-hamburger label {
    display: flex;
    align-items: center;
}

.container-hamburger label span {
    padding-right: 2vw;
}

.container-hamburger input {
    position: absolute;
    left: -100vw;
}

.hamburger-menu {
    position: absolute;
    right: 0%;
    top: 12vh;
    z-index: 99;
    width: 100%;
    background-color: #fff;
}

.hamburger-menu ul {
    padding: 0;
    margin: 0 0 2% 0;
    display: flex;
    flex-wrap: wrap;
    list-style: none;
    gap: 2%;
}

.hamburger-menu ul li {
    display: inline-flex;
    flex-grow: 1;
    background: #286125;
    padding: 2.5%;
    justify-content: center;
    align-items: center;
}

#toggle:checked ~ .hamburger-menu {
    display: block;
}

/*NOT HEADER*/

main {
    display: flex;
    margin: 10%;
}

footer {
    padding: 5% 10%;
}

.desktop {
    display: none;
}

@media screen and (min-width: 1000px) {

    /*GENERAL*/

    .desktop {
        display: block;
    }

    .mobile {
        display: none;
    }

    body {
        margin: 0 20%;
    }

    main {
        margin: unset;
    }

    /*HEADER*/

    .logo-banner {
        justify-content: unset;

    }
}

